fix: use fixed positioning to avoid overflow clipping on B站 player

--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -4,7 +4,7 @@
  */
 
 .bivishot-toolbar {
-  position: absolute;
+  position: fixed;
   z-index: 99999;
   display: flex;
   align-items: center;
